--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <a href="manifeste/manifeste.html"><h1>Manifeste</h1></a>
 <a href="lourd_leger/index_questions.html"><h1>Preneur de décisions 2000</h1></a>
 <a href="a_la_folie/index_formulaire.html"><h1>Vous avez gagné !</h1></a>
+<a href="web_bd/index_bd.html"><h1>Web BD</h1></a>
 </body>
 </html>
