--- a/lourd_leger/questions.html
+++ b/lourd_leger/questions.html
@@ -11,7 +11,7 @@
     <div class="container3">
     <p onclick="history.back()" class="goback">&#8619;</p>
     <a href="questions.html"><p class="refresh">&#10226;</p></a>
-    <a href="index_questions.html"><p class="home">&#8962;</p></a>
+    <a href="index.html"><p class="home">&#8962;</p></a>
 
     </div>
     <div class="container2">
