--- a/web_bd/infos.html
+++ b/web_bd/infos.html
@@ -31,7 +31,7 @@
 
         <div id="side_infos">
             <div>
-                <a href="index.html"><button id="bouton_infos">Menu</button></a>
+                <a href="index_bd.html"><button id="bouton_infos">Menu</button></a>
                 <p id="texte_infos">
                     Web BD créee et conceptualisée par Manon Hoarau,
                     <br>
