--- a/web_bd/index_bd.html
+++ b/web_bd/index_bd.html
@@ -28,8 +28,16 @@
     <div id="accueil">
         <img src="images/Portrait_actuelle_bitmap.jpg" id="image_accueil">
         <div id="boutons_accueil">
-            <button class="bouton_suivant" data-suiv="page_01"><span class="wingdings">1</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lire &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="wingdings">1</span></button>
-            <a href="infos.html"><button><span class="wingdings">3</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Infos &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="wingdings">3</span></button></a>
+            <button id="bouton_accueil" class="bouton_suivant" data-suiv="page_01">
+            <p><span class="wingdings">1</span></p>
+            <p>Lire</p>
+            <p><span class="wingdings">1</span></p>
+            </button>
+            <a href="infos.html"><button id="bouton_accueil">
+            <p><span class="wingdings">3</span></p>
+            <p>Infos</p>
+            <p><span class="wingdings">3</span></p>
+            </button></a>
         </div>
     </div>
 
