--- a/web_bd/infos.html
+++ b/web_bd/infos.html
@@ -33,9 +33,9 @@
             <div>
                 <a href="index_bd.html"><button id="bouton_infos">Menu</button></a>
                 <p id="texte_infos">
-                    Web BD créee et conceptualisée par Manon, élève
+                    Web BD créee et conceptualisée par Manon,
                     <br>
-                    de DSAA Design graphique en Narration Multimédia.
+                    élève de DSAA en Design graphique.
                     <br>
                     <br>
                     Pour une meilleure expérience de lecture,
